Made changes to fix the overlapping sections bug

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -555,7 +555,7 @@ nav .logo, .hero-navbar .logo {
 .vision-section {
     background-color: #ffffff15;
     text-align: center;
-    height: 80vh;
+    min-height: 80vh;
     padding: 2rem 2rem;
     color: #2c3e50;
 }
@@ -808,7 +808,7 @@ nav .logo, .hero-navbar .logo {
 }
 
 .impact-title {
-    padding-top: 5rem;
+    padding-top: 2rem;
     font-size: 2rem;
     font-weight: bold;
     color: #1b2530;
